[package]
name = "caves"
version = "0.1.0"
authors = ["sim"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "^1"
bevy_tiled_prototype = "*"
bevy = "^0.3"
bevy_type_registry = "^0.3"
tiled = "^0.9"
approx = "^0.4"
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
env_logger = "^0.8"
